--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,16 @@
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate.</p>
         <p>This is a v1 edit.</p>
+        <div width="500px" height="500px" background-color="#000000">
+        Test
+        <form>
+        <b>Username:</b> <input name="username" type="text"></ br>
+        <b>Password:</b> <input name="password" type="password"></ br>
+        <input type="submit" value="submit">
+        </form>
+        </div>
+
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
