--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,8 @@
         <!-- Add your site or application content here -->
         <p>Hello world! This is HTML5 Boilerplate.</p>
         <p>This is a v1 edit.</p>
+        <p><p>
+        <center>
         <div width="500px" height="500px" background-color="#000000">
         Test
         <form>
@@ -32,7 +34,7 @@
         <input type="submit" value="submit">
         </form>
         </div>
-
+		</center>
 
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
