--- a/static/main.css
+++ b/static/main.css
@@ -92,6 +92,12 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+#logon {
+	width: 50px;
+	background: #000000;
+	height: 50px;
+	display: none;
+}
 
 
 
